<resources>
    <string name="app_name">Weather Application</string>
    <string name="weather">Weather</string>
    <string name="conditions">Conditions</string>
    <string name="temperature">temperature</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="wind">Wind</string>
    <string name="speed">speed</string>
    <string name="information">Information</string>
    <string name="last_update">last update</string>
    <string name="title_activity_settings">Settings</string>
    <string name="unit_system">Unit system</string>
    <string-array name="measurement">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
</resources>
